# Robotics

./: .gitignore  README.md  Report_FirstProject.md  instructions.md
TestPkg/: CMakeLists.txt  package.xml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/package1/: RPM.h
src/: prova.txt  test.cpp  test.h
src/callbacks_complete/: CMakeLists.txt  introduction.txt  package.xml
src/callbacks_complete/cfg/: ApproximationParameters.cfg  WheelParameters.cfg
src/callbacks_complete/include/: SubPub.h
src/callbacks_complete/include/callbacks_complete/: ApproximationsConfig.h  RPM.h  SubPub.h  Subscriber.h  WheelsConfig.h
src/callbacks_complete/launch/: launch.launch
src/callbacks_complete/src/: Odometry.cpp  Subscriber.cpp  main_sub.cpp  velocity.cpp
src/first_project/: CMakeLists.txt  introduction.txt  package.xml
src/first_project/cfg/: ApproximationParameters.cfg  WheelParameters.cfg
src/first_project/include/first_project/: Subscriber.h
src/first_project/launch/: launch.launch
src/first_project/src/: Subscriber.cpp  main_sub.cpp  velocity.cpp
src/package1/: CMakeLists.txt  baglistener.cpp  baglistener.h  package.xml
src/package1/src/: baglistener.cpp
src/prova_classes/launch/: launch.launch
src/pub_sub/: package.xml
src/pub_sub/src/: pub.cpp  sub.cpp
